--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </p>
       <p>
         For more information, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues">issues</a>, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper/pulls">pull requests</a>, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper/wiki">wiki</a>, see the project page on <a class="externalLink"
-          href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">GitHub</a>.
+          href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">GitHub</a>. For PreferencePage settings Code Examples look <a href="https://GuavaEclipsePlugin.github.io/PreferencePageSettingDetails.html">here</a>.
       </p>
       <h2>Installation</h2>
       <h3>Eclipse Marketplace</h3>
