fixed ampersand problem

--- a/PreferencePageSettingDetails.html
+++ b/PreferencePageSettingDetails.html
@@ -90,7 +90,7 @@ public class SampleSimple {
         return false;
       SampleSimple that = (SampleSimple) object;
       return Objects.equal(this.intValue, that.intValue)
-          &amps;&amps; Objects.equal(this.strValue, that.strValue);
+          &amp;&amp; Objects.equal(this.strValue, that.strValue);
     }
     return false;
   }
@@ -163,7 +163,7 @@ public class SampleSimple {
     if (object instanceof SampleSimple) {
       SampleSimple that = (SampleSimple) object;
       return Objects.equal(this.intValue, that.intValue)
-          &amps;&amps; Objects.equal(this.strValue, that.strValue);
+          &amp;&amp; Objects.equal(this.strValue, that.strValue);
     }
     return false;
   }
