--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>"Guava Eclipse Plugin" is an eclipse plugin which will generate following methods using Google guava utilty classes
       <ul>
         <li>toString() [STRG + SHIFT + 4]</li>
-        <li>equals(Object object) &amps; hashCode() [STRG + SHIFT + 5]</li>
+        <li>equals(Object object) &amp; hashCode() [STRG + SHIFT + 5]</li>
         <li>compareTo(...) [STRG + SHIFT + 6]</li>
       </ul>
       </p>
