--- a/allReleases.html
+++ b/allReleases.html
@@ -14,7 +14,7 @@
     <div id="header">
       <h1>Guava Eclipse Plugin</h1>
     </div>
-    <div id="content">
+    <div class="content">
       <h2>All Releases</h2>
       <h3>Latest Version 1.4.0:</h3>
       <p>
