--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <h1>Guava Eclipse Plugin</h1>
     </div>
-    <div id="content">
+    <div class="content">
       <h2>Introduction</h2>
       <p>"Guava Eclipse Plugin" is an eclipse plugin which will generate following methods using Google guava utilty classes
       <ul>
