--- a/allReleases.html
+++ b/allReleases.html
@@ -7,16 +7,20 @@
   <title>Guava Eclipse Plugin - all releases</title>
   <link rel="icon" type="image/png" sizes="16x16" href="https://GuavaEclipsePlugin.github.io/images/favicon-16x16.png">
   <link rel="stylesheet" type="text/css" href="https://GuavaEclipsePlugin.github.io/styles/GuavaEclipsePlugin.css">
+  <script src="https://GuavaEclipsePlugin.github.io/js/jquery-2.1.4.min.js"></script>
+  <script src="https://GuavaEclipsePlugin.github.io/js/toc.js"></script>
+  
 </head>
 
-<body>
+<body onload="createToc();">
   <div id="container">
     <div id="header">
-      <h1>Guava Eclipse Plugin</h1>
+      <h1>Guava Eclipse Plugin - all releases</h1>
     </div>
     <div class="content">
-      <h2>All Releases</h2>
-      <h3>Latest Version 1.4.0:</h3>
+      <div class="toc"></div>
+      <section>
+      <h3>1.4.0</h3>
       <p>
       <h4>New Features</h4>
       <ul>
@@ -34,6 +38,9 @@
           pressing ShortCut Alt+Shift+S</li>
       </ul>
       </p>
+      </section>
+      <hr/>
+      <section>
       <h3>1.3.0</h3>
       <p>
       <h4>Features</h4>
@@ -54,7 +61,9 @@
         <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">#16</a> MenuEntries does not appear when pressing ShortCut Alt+Shift+S/li>
       </ul>
       </p>
+      </section>
       <hr/>
+      <section>
       <h3>1.2.1</h3>
       <p>
       <h4>Features</h4>
@@ -69,7 +78,9 @@
         <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/15">#15</a> CompareTo Method generation includes variables which are not comparable</li>
       </ul>
       </p>
+      </section>
       <hr/>
+      <section>
       <h3>1.2.0</h3>
       <p>
       <h4>Features</h4>
@@ -85,7 +96,9 @@
         <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/15">#15</a> CompareTo Method generation includes variables which are not comparable</li>
       </ul>
       </p>
+      </section>
       <hr/>
+      <section>
       <h3>1.1.0</h3>
       <p>
       <h4>Features</h4>
@@ -112,7 +125,9 @@
         <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/15">#15</a> CompareTo Method generation includes variables which are not comparable</li>
       </ul>
       </p>
+      </section>
       <hr/>
+      <section>
       <h3>1.0.1</h3>
       <p>
       <h4>Features</h4>
@@ -137,6 +152,7 @@
         <li>equals(Object object) &amps; hashCode()</li>
       </ul>
       </p>
+      </section>
     </div>
   </div>
 </body>
