--- a/index.html
+++ b/index.html
@@ -9,81 +9,95 @@
   <link rel="stylesheet" type="text/css" href="https://GuavaEclipsePlugin.github.io/styles/GuavaEclipsePlugin.css">
   
   <link href="https://GuavaEclipsePlugin.github.io/styles/shariff.complete.css" rel="stylesheet">
+  
+  <script src="https://GuavaEclipsePlugin.github.io/js/jquery-2.1.4.min.js"></script>
+  <script src="https://GuavaEclipsePlugin.github.io/js/toc.js"></script>
 </head>
-<body>
+<body onload="createToc();">
   <div id="container">
     <div id="header">
       <h1>Guava Eclipse Plugin</h1>
     </div>
     <div class="content">
-      <h2>Introduction</h2>
-      <p>"Guava Eclipse Plugin" is an eclipse plugin which will generate following methods using Google guava utilty classes
-      <ul>
-        <li>toString() [STRG + SHIFT + 4]</li>
-        <li>equals(Object object) &amp; hashCode() [STRG + SHIFT + 5]</li>
-        <li>compareTo(...) [STRG + SHIFT + 6]</li>
-      </ul>
-      </p>
-      <p>
-      <div id="screenshots">
-    	<a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences.png"><img alt="Guava Eclipse Plugin Preferences" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_475x400.png"/></a>
-	    <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu.png"><img alt="Guava Eclipse Plugin Popup Menu" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_306x400.png"></a>
-        <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_Source.png"><img alt="Guava Eclipse Plugin Popup Source Menu" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_Source_357x400.png"></a>
-      	<a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_SelectionDialog.png"><img alt="Guava Eclipse Plugin Selection Dialog" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_SelectionDialog_326x400.png"></a>
-        <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Keys.jpg"><img alt="Guava Eclipse Plugin Keys" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Keys_539x400.jpg"></a>
-      </div>
-      </p>
-      <p>
-        For more information, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues">issues</a>, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper/pulls">pull requests</a>, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper/wiki">wiki</a>, see the project page on <a class="externalLink"
-          href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">GitHub</a>. For PreferencePage settings Code Examples look <a href="https://GuavaEclipsePlugin.github.io/PreferencePageSettingDetails.html">here</a>.
-      </p>
-      <h2>Installation</h2>
-      <h3>Eclipse Marketplace</h3>
-      <p>
-        <a href="https://marketplace.eclipse.org/marketplace-client-intro?mpc_install=26788" class="drag"
-          title="Drag to your running Eclipse workspace to install Guava Eclipse Plugin"><img
-          src="https://marketplace.eclipse.org/sites/all/themes/solstice/_themes/solstice_marketplace/public/images/btn-install.png"
-          alt="Drag to your running Eclipse workspace to install Guava Eclipse Plugin" /></a>
-      </p>
-      <h3>manually</h3>
-      <p>
-        For Releases use this URL:
-        <code>https://sourceforge.net/projects/guavaeclipse/files/UpdateSite/LATEST/</code>
-      </p>
-      <p>
-        For SnapShot-Releases use this one:
-        <code>https://sourceforge.net/projects/guavaeclipse/files/SNAPSHOTS/UpdateSite/LATEST/</code>
-      </p>
-      <p>
-        Look here for more details about how to use update sites: <a class="externalLink"
-          href="http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-34.htm">http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-34.htm</a>
-      </p>
-      <h2>Changelog</h2>
-      <p>Latest Version 1.4.0:</p>
-      <h3>New Features</h3>
-      <ul>
-        <li>moved to github</li>
-        <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/20">FR#20</a> - Using MoreObjects.toStringHelper</li>
-      </ul>
-      <h3>Fixed Bugs</h3>
-      <ul>
-        <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/15">Bug#15</a> - CompareTo Method generation includes variables which are not comparable</li>
-      </ul>
-      <h3>Known Issues</h3>
-      <ul>
-        <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/17">FR#17</a> - Maven Release Mechanism does not work</li>
-        <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">Bug#16</a> - MenuEntries does not appear when
-          pressing ShortCut Alt+Shift+S</li>
-      </ul>
-      <i><a href="https://GuavaEclipsePlugin.github.io/allReleases.html">Overview for all releases</a></i>
-      <h2>Copyright</h2>
-      <p>
-        Guava Eclipse Plugin is under the <a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License V2.0</a>
-      </p>
-      <h2>Contributions</h2>
-      <p>Any contributions are welcome!</p>
-      <p>You can find the sources here <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper</a></p>
-      <div class="shariff"></div>
+      <div class="toc"></div>
+      <section>
+        <h3>Introduction</h3>
+        <p>"Guava Eclipse Plugin" is an eclipse plugin which will generate following methods using Google guava utilty classes
+        <ul>
+          <li>toString() [STRG + SHIFT + 4]</li>
+          <li>equals(Object object) &amp; hashCode() [STRG + SHIFT + 5]</li>
+          <li>compareTo(...) [STRG + SHIFT + 6]</li>
+        </ul>
+        </p>
+        <p>
+          <div id="screenshots">
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences.png"><img alt="Guava Eclipse Plugin Preferences" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_475x400.png"/></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu.png"><img alt="Guava Eclipse Plugin Popup Menu" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_306x400.png"></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_Source.png"><img alt="Guava Eclipse Plugin Popup Source Menu" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_Source_357x400.png"></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_SelectionDialog.png"><img alt="Guava Eclipse Plugin Selection Dialog" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_SelectionDialog_326x400.png"></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Keys.jpg"><img alt="Guava Eclipse Plugin Keys" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Keys_539x400.jpg"></a>
+          </div>
+        </p>
+        <p>
+          For more information, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues">issues</a>, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper/pulls">pull requests</a>, <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper/wiki">wiki</a>, see the project page on <a class="externalLink"
+            href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">GitHub</a>. For PreferencePage settings Code Examples look <a href="https://GuavaEclipsePlugin.github.io/PreferencePageSettingDetails.html">here</a>.
+        </p>
+      </section>
+      <section>
+        <h3>Installation</h3>
+        <h4>Eclipse Marketplace</h4>
+        <p>
+          <a href="https://marketplace.eclipse.org/marketplace-client-intro?mpc_install=26788" class="drag"
+            title="Drag to your running Eclipse workspace to install Guava Eclipse Plugin"><img
+            src="https://marketplace.eclipse.org/sites/all/themes/solstice/_themes/solstice_marketplace/public/images/btn-install.png"
+            alt="Drag to your running Eclipse workspace to install Guava Eclipse Plugin" /></a>
+        </p>
+        <h4>manually</h4>
+        <p>
+          For Releases use this URL:
+          <code>https://sourceforge.net/projects/guavaeclipse/files/UpdateSite/LATEST/</code>
+        </p>
+        <p>
+          For SnapShot-Releases use this one:
+          <code>https://sourceforge.net/projects/guavaeclipse/files/SNAPSHOTS/UpdateSite/LATEST/</code>
+        </p>
+        <p>
+          Look here for more details about how to use update sites: <a class="externalLink"
+            href="http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-34.htm">http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-34.htm</a>
+        </p>
+      </section>
+      <section>
+        <h3>Changelog</h3>
+        <p>Latest Version 1.4.0:</p>
+        <h4>New Features</h4>
+        <ul>
+          <li>moved to github</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/20">FR#20</a> - Using MoreObjects.toStringHelper</li>
+        </ul>
+        <h4>Fixed Bugs</h4>
+        <ul>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/15">Bug#15</a> - CompareTo Method generation includes variables which are not comparable</li>
+        </ul>
+        <h4>Known Issues</h4>
+        <ul>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/17">FR#17</a> - Maven Release Mechanism does not work</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">Bug#16</a> - MenuEntries does not appear when
+            pressing ShortCut Alt+Shift+S</li>
+        </ul>
+        <i><a href="https://GuavaEclipsePlugin.github.io/allReleases.html">Overview for all releases</a></i>
+      </section>
+      <section>
+        <h3>Copyright</h3>
+        <p>
+          Guava Eclipse Plugin is under the <a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License V2.0</a>
+        </p>
+      </section>
+      <section>
+        <h3>Contributions</h3>
+        <p>Any contributions are welcome!</p>
+        <p>You can find the sources here <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper</a></p>
+        <div class="shariff"></div>
+      </section>
     </div>
   </div>
   <script src="https://GuavaEclipsePlugin.github.io/js/shariff.complete.js"></script>
