--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <script src="https://GuavaEclipsePlugin.github.io/js/jquery-2.1.4.min.js"></script>
   <script src="https://GuavaEclipsePlugin.github.io/js/toc.js"></script>
+  <script src="https://apis.google.com/js/platform.js" type="text/javascript" async="async" defer="defer"></script>
 </head>
 <body onload="createToc();">
   <div id="container">
@@ -96,11 +97,11 @@
         <h3>Contributions</h3>
         <p>Any contributions are welcome!</p>
         <p>You can find the sources here <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper</a></p>
-        <div class="shariff"></div>
+        <g:plusone size="small" data-href="https://GuavaEclipsePlugin.github.io" data-annotation="bubble" data-width="10"></g:plusone>
       </section>
     </div>
   </div>
-  <script src="https://GuavaEclipsePlugin.github.io/js/shariff.complete.js"></script>
+  
   
 </body>
 </html>
