revert back to sharif

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         <h3>Contributions</h3>
         <p>Any contributions are welcome!</p>
         <p>You can find the sources here <a href="https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper">https://github.com/GuavaEclipsePlugin/GuavaEclipseHelper</a></p>
-        <div class="g-plusone" data-size="medium" data-href="https://GuavaEclipsePlugin.github.io" data-annotation="bubble" data-width="90"></g:plusone>
-        <div class="fb-like" data-href="https://guavaeclipseplugin.github.io/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+        <div class="shariff"></div>
       </section>
     </div>
   </div>
+  <script src="https://GuavaEclipsePlugin.github.io/js/shariff.complete.js"></script>
   
   
 </body>
