update release notes

--- a/allReleases.html
+++ b/allReleases.html
@@ -20,6 +20,31 @@
     <div class="content">
       <div class="toc"></div>
       <section>
+      <h3>1.5.0</h3>
+      <p>
+        <h4>New Features</h4>
+        <ul>
+          <li>moved update site to <a href="https://bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/UpdateSite">bintray</a></li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/23">FR#23</a> - seperate compareTo preferences page</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/22">FR#22</a> - Possibility to define $quot;Task Tag$quot; for comments in compareTo methods</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/24">FR#24</a> - option for Java 7 java.util.Objects support</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/25">FR#25</a> - option for primitive equality check</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/33">FR#33</a> - Objects.hashCode and equals are deprecated for Java 7 and later</li>
+        </ul>
+        <h4>Fixed Bugs</h4>
+        <ul>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/36">Bug#36</a> - Error installing from Eclipse Market Place</li>
+        </ul>
+        <h4>Known Issues</h4>
+        <ul>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/17">FR#17</a> - Maven Release Mechanism does not work</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">Bug#16</a> - MenuEntries does not appear when
+            pressing ShortCut Alt+Shift+S</li>
+        </ul>
+      </p>
+      </section>
+      <hr/>
+      <section>
       <h3>1.4.0</h3>
       <p>
       <h4>New Features</h4>
