--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <h4>manually</h4>
         <p>
           For Releases use this URL:
-          <code>https://sourceforge.net/projects/guavaeclipse/files/UpdateSite/LATEST/</code>
+          <code>https://dl.bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/latest/</code>
         </p>
         <p>
           For SnapShot-Releases use this one:
-          <code>https://sourceforge.net/projects/guavaeclipse/files/SNAPSHOTS/UpdateSite/LATEST/</code>
+          <code>https://dl.bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/SNAPSHOT/latest/</code>
         </p>
         <p>
           Look here for more details about how to use update sites: <a class="externalLink"
@@ -77,15 +77,19 @@
       </section>
       <section>
         <h3>Changelog</h3>
-        <p>Latest Version 1.4.0:</p>
+        <p>Latest Version: 1.5.0</p>
         <h4>New Features</h4>
         <ul>
-          <li>moved to github</li>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/20">FR#20</a> - Using MoreObjects.toStringHelper</li>
+          <li>moved update site to <a href="https://bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/UpdateSite">bintray</a></li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/23">FR#23</a> - seperate compareTo preferences page</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/22">FR#22</a> - Possibility to define $quot;Task Tag$quot; for comments in compareTo methods</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/24">FR#24</a> - option for Java 7 java.util.Objects support</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/25">FR#25</a> - option for primitive equality check</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/33">FR#33</a> - Objects.hashCode and equals are deprecated for Java 7 and later</li>
         </ul>
         <h4>Fixed Bugs</h4>
         <ul>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/15">Bug#15</a> - CompareTo Method generation includes variables which are not comparable</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/36">Bug#36</a> - Error installing from Eclipse Market Place</li>
         </ul>
         <h4>Known Issues</h4>
         <ul>
