added 2 new preference page screenShots

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         </p>
         <p>
           <div id="screenshots">
-            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences.png"><img alt="Guava Eclipse Plugin Preferences" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_475x400.png"/></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences.png"><img alt="Guava Eclipse Plugin Preferences" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_533x400.png"/></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_EqualsHashCode.png"><img alt="Guava Eclipse Plugin Equals/HashCode Preferences" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_EqualsHashCode_499x400.png"/></a>
+            <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_CompareTo.png"><img alt="Guava Eclipse Plugin CompareTo Preferences" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_Preferences_CompareTo_498x400.png"/></a>
             <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu.png"><img alt="Guava Eclipse Plugin Popup Menu" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_306x400.png"></a>
             <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_Source.png"><img alt="Guava Eclipse Plugin Popup Source Menu" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_PopupMenu_Source_357x400.png"></a>
             <a href="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_SelectionDialog.png"><img alt="Guava Eclipse Plugin Selection Dialog" src="https://GuavaEclipsePlugin.github.io/images/GuavaEclipsePlugin_SelectionDialog_326x400.png"></a>
