--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="toc"></div>
       <section>
         <h3>Introduction</h3>
-        <p>"Guava Eclipse Plugin" is an eclipse plugin which will generate following methods using Google guava utilty classes
+        <p>"Guava Eclipse Plugin" is an eclipse plugin which will generate following methods using Google guava utility classes or jdk utility classes
         <ul>
           <li>toString() [STRG + SHIFT + 4]</li>
           <li>equals(Object object) &amp; hashCode() [STRG + SHIFT + 5]</li>
