--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>
           <a href="https://marketplace.eclipse.org/marketplace-client-intro?mpc_install=26788" class="drag"
             title="Drag to your running Eclipse workspace to install Guava Eclipse Plugin"><img
-            src="https://marketplace.eclipse.org/sites/all/themes/solstice/_themes/solstice_marketplace/public/images/btn-install.png"
+            src="https://GuavaEclipsePlugin.github.io/images/InstallButton.png"
             alt="Drag to your running Eclipse workspace to install Guava Eclipse Plugin" /></a>
         </p>
         <h4>manually</h4>
