update link to update site

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
         <p>
           Look here for more details about how to use update sites: <a class="externalLink"
-            href="http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-34.htm">http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-34.htm</a>
+            href="https://help.eclipse.org/mars/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-127.htm">https://help.eclipse.org/mars/index.jsp?topic=%2Forg.eclipse.platform.doc.user%2Ftasks%2Ftasks-127.htm</a>
         </p>
       </section>
       <section>
