--- a/allReleases.html
+++ b/allReleases.html
@@ -20,6 +20,28 @@
     <div class="content">
       <div class="toc"></div>
       <section>
+        <h3>1.6.0</h3>
+        <p>
+          <h4>New Features</h4>
+          <ul>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/30">FR#30</a> - Escape autoboxing for primitive types</li>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/31">FR#31</a> - Add option to generate //$NON-NLS-1$</li>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/34">FR#34</a> - Add option to skip nulls on toString generation</li>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/35">FR#35</a> - Add @Generated annotation to skip static code analyze</li>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/26">FR#26</a> - Possibility to add nosonar comment for equals methods</li>
+          </ul>
+          <h4>Fixed Bugs</h4>
+          <h4>Known Issues</h4>
+          <ul>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/17">FR#17</a> - Maven Release Mechanism does not work</li>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">Bug#16</a> - MenuEntries does not appear when
+              pressing ShortCut Alt+Shift+S</li>
+            <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/21">FR#21</a> - Support for inner classes</li>
+            </ul>
+          <i><a href="https://GuavaEclipsePlugin.github.io/allReleases.html">Overview for all releases</a></i>
+          </p>
+      </section>
+      <section>
       <h3>1.5.0</h3>
       <p>
         <h4>New Features</h4>
