--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <h4>manually</h4>
         <p>
           For Releases use this URL:
-          <code>https://dl.bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/latest/</code>
+          <code>currently unavailable</code>
         </p>
         <p>
           For SnapShot-Releases use this one:
-          <code>https://dl.bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/SNAPSHOT/latest/</code>
+          <code>https://guavaeclipseplugin.github.io/GuavaEclipsePluginUpdateSite/SNAPSHOT/latest</code>
         </p>
         <p>
           Look here for more details about how to use update sites: <a class="externalLink"
@@ -79,26 +79,43 @@
       </section>
       <section>
         <h3>Changelog</h3>
-        <p>Latest Version: 1.5.0</p>
+        <p>1.7.0</p>
         <h4>New Features</h4>
         <ul>
-          <li>moved update site to <a href="https://bintray.com/guavaeclipseplugin/GuavaEclipsePlugin/UpdateSite">bintray</a></li>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/23">FR#23</a> - seperate compareTo preferences page</li>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/22">FR#22</a> - Possibility to define $quot;Task Tag$quot; for comments in compareTo methods</li>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/24">FR#24</a> - option for Java 7 java.util.Objects support</li>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/25">FR#25</a> - option for primitive equality check</li>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/33">FR#33</a> - Objects.hashCode and equals are deprecated for Java 7 and later</li>
+          <li>requires Java 11</li>
         </ul>
         <h4>Fixed Bugs</h4>
         <ul>
-          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/36">Bug#36</a> - Error installing from Eclipse Market Place</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/42">FR#42</a> - update site on bintray not reachable</li>
         </ul>
         <h4>Known Issues</h4>
         <ul>
           <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/17">FR#17</a> - Maven Release Mechanism does not work</li>
           <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">Bug#16</a> - MenuEntries does not appear when
             pressing ShortCut Alt+Shift+S</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/21">FR#21</a> - Support for inner classes</li>
+          </ul>
+        <i><a href="https://GuavaEclipsePlugin.github.io/allReleases.html">Overview for all releases</a></i>
+      </section>
+      <section>
+        <h3>Changelog</h3>
+        <p>1.6.0</p>
+        <h4>New Features</h4>
+        <ul>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/30">FR#30</a> - Escape autoboxing for primitive types</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/31">FR#31</a> - Add option to generate //$NON-NLS-1$</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/34">FR#34</a> - Add option to skip nulls on toString generation</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/35">FR#35</a> - Add @Generated annotation to skip static code analyze</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/26">FR#26</a> - Possibility to add nosonar comment for equals methods</li>
         </ul>
+        <h4>Fixed Bugs</h4>
+        <h4>Known Issues</h4>
+        <ul>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/17">FR#17</a> - Maven Release Mechanism does not work</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/16">Bug#16</a> - MenuEntries does not appear when
+            pressing ShortCut Alt+Shift+S</li>
+          <li><a href="https://github.com/GuavaEclipsePlugin/GuavaEclipsePluginParent/issues/21">FR#21</a> - Support for inner classes</li>
+          </ul>
         <i><a href="https://GuavaEclipsePlugin.github.io/allReleases.html">Overview for all releases</a></i>
       </section>
       <section>
